compiler/lume_parser/src/snapshots/lume_parser__tests__array_snapshots@trailing_comma.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"let _ = [a, ];\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Array(
                Array {
                    values: [
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "a",
                                    location: Location(
                                        9..10,
                                    ),
                                },
                            },
                        ),
                    ],
                    location: Location(
                        8..13,
                    ),
                },
            ),
            location: Location(
                0..14,
            ),
        },
    ),
]
