compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@function_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = call();\")"
---
SOURCE_FILE@0..15
  LET_STMT@0..15
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    STATIC_CALL_EXPR@7..14
      WHITESPACE@7..8 " "
      PATH@8..12
        PATH_CALLABLE@8..12
          NAME@8..12
            IDENT@8..12 "call"
      ARG_LIST@12..14
        LEFT_PAREN@12..13 "("
        RIGHT_PAREN@13..14 ")"
    SEMICOLON@14..15 ";"
