compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@function_generic.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = call<T>(a, b);\")"
---
SOURCE_FILE@0..22
  LET_STMT@0..22
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    STATIC_CALL_EXPR@7..21
      WHITESPACE@7..8 " "
      PATH@8..15
        PATH_CALLABLE@8..15
          NAME@8..12
            IDENT@8..12 "call"
          GENERIC_ARGS@12..15
            LESS@12..13 "<"
            NAMED_TYPE@13..14
              PATH@13..14
                PATH_TYPE@13..14
                  NAME@13..14
                    IDENT@13..14 "T"
            GREATER@14..15 ">"
      ARG_LIST@15..21
        LEFT_PAREN@15..16 "("
        VARIABLE_EXPR@16..17
          NAME@16..17
            IDENT@16..17 "a"
        COMMA@17..18 ","
        WHITESPACE@18..19 " "
        VARIABLE_EXPR@19..20
          NAME@19..20
            IDENT@19..20 "b"
        RIGHT_PAREN@20..21 ")"
    SEMICOLON@21..22 ";"
