compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@function_param_1.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = call(a);\")"
---
SOURCE_FILE@0..16
  LET_STMT@0..16
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    STATIC_CALL_EXPR@8..15
      PATH@8..12
        PATH_CALLABLE@8..12
          NAME@8..12
            IDENT@8..12 "call"
      ARG_LIST@12..15
        LEFT_PAREN@12..13 "("
        VARIABLE_EXPR@13..14
          NAME@13..14
            IDENT@13..14 "a"
        RIGHT_PAREN@14..15 ")"
    SEMICOLON@15..16 ";"
