compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@function_param_2.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = call(a, b);\")"
---
SOURCE_FILE@0..19
  LET_STMT@0..19
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    STATIC_CALL_EXPR@7..18
      WHITESPACE@7..8 " "
      PATH@8..12
        PATH_CALLABLE@8..12
          NAME@8..12
            IDENT@8..12 "call"
      ARG_LIST@12..18
        LEFT_PAREN@12..13 "("
        VARIABLE_EXPR@13..14
          NAME@13..14
            IDENT@13..14 "a"
        COMMA@14..15 ","
        WHITESPACE@15..16 " "
        VARIABLE_EXPR@16..17
          NAME@16..17
            IDENT@16..17 "b"
        RIGHT_PAREN@17..18 ")"
    SEMICOLON@18..19 ";"
