compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@generic_static_method.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"let _ = Foo<T>::call(a, b);\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Call(
                Call {
                    callee: None,
                    name: Path {
                        root: [
                            Type {
                                name: Identifier {
                                    name: "Foo",
                                    location: Location(
                                        8..11,
                                    ),
                                },
                                bound_types: [
                                    Named(
                                        NamedType {
                                            name: Path {
                                                root: [],
                                                name: Type {
                                                    name: Identifier {
                                                        name: "T",
                                                        location: Location(
                                                            12..13,
                                                        ),
                                                    },
                                                    bound_types: [],
                                                    location: Location(
                                                        12..13,
                                                    ),
                                                },
                                                location: Location(
                                                    12..13,
                                                ),
                                            },
                                        },
                                    ),
                                ],
                                location: Location(
                                    8..14,
                                ),
                            },
                        ],
                        name: Callable {
                            name: Identifier {
                                name: "call",
                                location: Location(
                                    16..20,
                                ),
                            },
                            bound_types: [],
                            location: Location(
                                16..20,
                            ),
                        },
                        location: Location(
                            16..20,
                        ),
                    },
                    arguments: [
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "a",
                                    location: Location(
                                        21..22,
                                    ),
                                },
                            },
                        ),
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "b",
                                    location: Location(
                                        24..25,
                                    ),
                                },
                            },
                        ),
                    ],
                    location: Location(
                        16..26,
                    ),
                },
            ),
            location: Location(
                0..27,
            ),
        },
    ),
]
